Issue #2284793 by neardark: Theming - Footer is overlapping content.

--- a/profiles/dcco/themes/dcco2014/css/screen.css
+++ b/profiles/dcco/themes/dcco2014/css/screen.css
@@ -962,6 +962,7 @@ body {
 
 #main {
   background-color: white;
+  overflow: hidden;
 }
 
 #above-content {
