--- a/profiles/dcco/themes/dcco2014/sass/layout/_region--main.scss
+++ b/profiles/dcco/themes/dcco2014/sass/layout/_region--main.scss
@@ -6,6 +6,7 @@
 // Main
 #main {
   background-color: $white;
+  overflow: hidden;
 }
 
 // Above content
